--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <module>m1-lecture-03</module>
         <module>m1-lecture-05</module>
         <module>m1-lecture-06</module>
+        <module>m1-lecture-07</module>
     </modules>
 
     <properties>
