--- a/m1-lecture-09/pom.xml
+++ b/m1-lecture-09/pom.xml
@@ -3,24 +3,26 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>com.javarush</groupId>
+        <artifactId>javarush-university</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
 
-    <groupId>com.javarush</groupId>
-    <artifactId>javarush-university</artifactId>
-    <version>1.0-SNAPSHOT</version>
-    <packaging>pom</packaging>
-    <modules>
-        <module>m1-lecture-03</module>
-        <module>m1-lecture-05</module>
-        <module>m1-lecture-06</module>
-        <module>m1-lecture-07</module>
-        <module>m1-lecture-08</module>
-        <module>m1-lecture-09</module>
-    </modules>
+    <artifactId>m1-lecture-07</artifactId>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.atp-fivt</groupId>
+            <artifactId>ljv</artifactId>
+            <version>1.04</version>
+        </dependency>
+    </dependencies>
 
 </project>
