--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <module>m1-lecture-08</module>
         <module>m1-lecture-09</module>
         <module>m1-lecture-11</module>
+        <module>m1-lecture-12</module>
     </modules>
 
     <properties>
