--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         <module>m1-lecture-11</module>
         <module>m1-lecture-12</module>
         <module>m1-lecture-13</module>
+        <module>m1-lecture-15</module>
     </modules>
 
     <properties>
