--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <module>m1-lecture-12</module>
         <module>m1-lecture-13</module>
         <module>m1-lecture-15</module>
+        <module>m1-lecture-16</module>
     </modules>
 
     <properties>
