--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <module>m1-lecture-13</module>
         <module>m1-lecture-15</module>
         <module>m1-lecture-16</module>
+        <module>m1-lecture-17</module>
     </modules>
 
     <properties>
