--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <module>m1-lecture-15</module>
         <module>m1-lecture-16</module>
         <module>m1-lecture-17</module>
+        <module>m1-lecture-19</module>
     </modules>
 
     <properties>
