--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <module>m1-lecture-16</module>
         <module>m1-lecture-17</module>
         <module>m1-lecture-19</module>
+        <module>m1-lecture-20</module>
     </modules>
 
     <properties>
