--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         <module>m1-lecture-17</module>
         <module>m1-lecture-19</module>
         <module>m1-lecture-20</module>
+        <module>m1-lecture-21</module>
     </modules>
 
     <properties>
