--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
         <module>m1-lecture-19</module>
         <module>m1-lecture-20</module>
         <module>m1-lecture-21</module>
+        <module>m3-level-17</module>
     </modules>
 
     <properties>
