--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
         <module>m1-lecture-20</module>
         <module>m1-lecture-21</module>
         <module>m3-level-17</module>
+        <module>m1-lecture-23</module>
     </modules>
 
     <properties>
