--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
         <module>m1-lecture-21</module>
         <module>m3-level-17</module>
         <module>m1-lecture-23</module>
+        <module>m3-level-18</module>
     </modules>
 
     <properties>
