--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,8 @@
         <module>m3-level-17</module>
         <module>m1-lecture-23</module>
         <module>m3-level-18</module>
+        <module>m1-lecture-24</module>
+        <module>m3-level-19</module>
     </modules>
 
     <properties>
