--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,7 @@
         <module>m4-level-02</module>
         <module>m4-level-03</module>
         <module>m4-level-04</module>
+        <module>m3-project-01</module>
     </modules>
 
     <properties>
