--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,7 @@
         <module>m4-level-03</module>
         <module>m4-level-04</module>
         <module>m3-project-01</module>
+        <module>m2-level-01</module>
     </modules>
 
     <properties>
