--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,7 @@
         <module>m3-project-01</module>
         <module>m2-level-01</module>
         <module>m2-level-02</module>
+        <module>m2-level-04</module>
     </modules>
 
     <properties>
