--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,7 @@
         <module>m2-level-01</module>
         <module>m2-level-02</module>
         <module>m2-level-04</module>
+        <module>m2-level-05</module>
     </modules>
 
     <properties>
