--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,7 @@
         <module>m2-level-04</module>
         <module>m2-level-05</module>
         <module>m2-level-06</module>
+        <module>m2-level-07</module>
     </modules>
 
     <properties>
