--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,8 @@
         <module>m2-level-06</module>
         <module>m2-level-07</module>
         <module>m2-level-08</module>
+        <module>m2-level-09</module>
+        <module>m2-level-11</module>
     </modules>
 
     <properties>
