--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,10 @@
         <module>m2-level-08</module>
         <module>m2-level-09</module>
         <module>m2-level-11</module>
+        <module>m2-level-12</module>
+        <module>m2-level-13</module>
+        <module>m2-level-14</module>
+        <module>m2-level-15</module>
     </modules>
 
     <properties>
