--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,9 @@
         <module>m2-level-13</module>
         <module>m2-level-14</module>
         <module>m2-level-15</module>
+        <module>m2-level-17</module>
+        <module>m2-level-18</module>
+        <module>m2-level-19</module>
     </modules>
 
     <properties>
