--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,7 @@
         <module>m2-level-17</module>
         <module>m2-level-18</module>
         <module>m2-level-19</module>
+        <module>m4-level-07</module>
     </modules>
 
     <properties>
