--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -5,7 +5,7 @@
          http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
          version="4.0">
 
-    <display-name>HelloQuest</display-name>
+    <display-name>HelloQuest(II)</display-name>
 
     <welcome-file-list>
         <welcome-file>index.jsp</welcome-file>
@@ -13,6 +13,9 @@
 
     <session-config>
         <session-timeout>30</session-timeout>
+        <cookie-config>
+            <http-only>true</http-only>
+        </cookie-config>
     </session-config>
 
 </web-app>
